<?xml version="1.0"?>
<package format="2">
  <name>driver</name>
  <version>0.0.1</version>
  <description>PTU Driver</description>

  <maintainer email="info@seervision.com">Seervision</maintainer>
  <license>proprietary</license>
  <author email="info@seervision.com">Seervision</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>ptu_mock</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>ptu_mock</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>ptu_mock</exec_depend>


</package>
