<?xml version="1.0"?>
<package format="2">
  <name>comm_msgs</name>
  <version>0.0.1</version>
  <description>Common messages</description>

  <maintainer email="info@seervision.com">Seervision</maintainer>
  <license>proprietary</license>
  <author email="info@seervision.com">Seervision</author>

  <buildtool_depend>catkin</buildtool_depend>

</package>
